--- a/Secao10-Funcoes/index.html
+++ b/Secao10-Funcoes/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
   </head>
   <body>
+    <div>
+      <p>Clique aqui</p>
+    </div>
     <script src="/Secao10-Funcoes/script.js"></script>
   </body>
 </html>
