--- a/Secao10-Funcoes/index.html
+++ b/Secao10-Funcoes/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div>
-      <p>Clique aqui</p>
+      <button class="buy">Clique aqui</button>
     </div>
     <script src="/Secao10-Funcoes/script.js"></script>
   </body>
