--- a/Secao11-Arrays/7-Filter_Method.html
+++ b/Secao11-Arrays/7-Filter_Method.html
@@ -15,6 +15,9 @@
       console.log(
         `Vamos utilizar o Filter Method passando uma funcao para encontrar somente os depositos.`
       );
+      console.log(
+        "const movements = [200, 450, -400, 3000, -650, -130, 70, 1300]"
+      );
       const deposits = movements.filter(function (mov) {
         return mov > 0;
       });
