Creating and filling arrays

--- a/Secao11-Arrays/4-Foreach-Maps.html
+++ b/Secao11-Arrays/4-Foreach-Maps.html
@@ -31,6 +31,10 @@
       currenciesUnique.forEach((value, key, map) => {
         console.log(`${key}: ${value} - ${map}`);
       });
+
+      const a = ["a", "b", "c"];
+      const it1 = a.entries();
+      console.log(it1);
     </script>
   </body>
 </html>
